[tool.poetry]
name = "neuraltm"
version = "0.1.0"
description = ""
authors = ["Riki Murakami"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.19.5"
scipy = "1.6"
pandas = "^1.3.3"
tqdm = "^4.62.3"
more-itertools = "^8.10.0"
rbo = "^0.1.2"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
gensim = "^4.1.2"
nlplot = "^1.4.0"
wordcloud = "^1.8.1"
skorch = "^0.10.0"
jaxlib = {url = "https://storage.googleapis.com/jax-releases/cuda111/jaxlib-0.1.69+cuda111-cp39-none-manylinux2010_x86_64.whl"}
chex = "^0.0.8"
wandb = "^0.12.3"
tensorflow = "^2.6.0"
hydra-core = "^1.1.1"
torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.9.1%2Bcu111-cp39-cp39-linux_x86_64.whl"}
iteration-utilities = "^0.11.0"
torchlars = "^0.1.2"
nltk = "^3.6.5"
multipledispatch = "^0.6.0"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
jupyter = "^1.0.0"
notebook = "^6.4.4"
ipykernel = "^6.4.1"
mypy = "^0.910"
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
