[tool.poetry]
name = "sktopic"
version = "0.1.0"
description = ""
authors = ["rsimd <rickysimd@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
tqdm = "^4.62.3"
more-itertools = "^8.10.0"
seaborn = "^0.11.2"
wordcloud = "^1.8.1"
toolz = "^0.11.1"
wandb = "^0.12.5"
torch = "^1.10.0"
skorch = {git = "https://github.com/skorch-dev/skorch.git", rev = "release-0.11.0"}
gensim = "^4.1.2"
octis = "^1.9.0"
hydra-core = "^1.1.1"
hyperspherical-vae = {git = "https://github.com/nicola-decao/s-vae-pytorch.git"}
pandarallel = "^1.5.4"
rootpath = "^0.1.1"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
jupyterlab = "^3.2.1"
ipykernel = "^6.4.2"
pylint = "^2.11.1"
pyright = "^0.0.10"
mypy = "^0.910"
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.10.0+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html"